--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,17 +9,20 @@ platforms:
   - name: ubuntu-12.04
   - name: ubuntu-14.04
   - name: centos-6.5
+    attributes:
+      golang:
+        install_dir: '/usr'
   - name: centos-5.10
+    run_list:
+      - recipe[yum-repoforge::default]
+    attributes:
+      golang:
+        install_dir: '/usr'
 
 suites:
-  - name: default
-    run_list: 
-      - recipe[consul::binary_install]
-      - recipe[consul]
   - name: binary
     run_list: 
       - recipe[consul::binary_install]
   - name: source
     run_list: 
-      - recipe[golang]
       - recipe[consul::source_install]
