--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,6 +23,9 @@ suites:
   - name: default
     run_list:
       - recipe[consul::default]
+    attributes:
+        consul:
+            datacenter: FortMeade
   - name: ui
     run_list:
       - recipe[consul::default]
