--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -26,6 +26,8 @@ suites:
     attributes:
       consul:
           datacenter: FortMeade
+          bind_interface: eth0
+          advertise_interface: eth0
   - name: ui
     run_list:
       - recipe[consul::default]
@@ -33,3 +35,4 @@ suites:
     attributes:
       consul:
          serve_ui: true
+         client_interface: eth0
