--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -26,6 +26,13 @@ suites:
     attributes:
       consul:
           datacenter: FortMeade
+  - name: runit
+    run_list:
+      - recipe[consul::default]
+    attributes:
+      consul:
+          datacenter: FortMeade
+          init_style: runit
   - name: ui
     run_list:
       - recipe[consul::default]
