--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -43,3 +43,10 @@ suites:
       consul:
          serve_ui: true
          client_interface: eth0
+  - name: cluster
+    run_list:
+      - recipe[consul::default]
+    attributes:
+      consul:
+        service_mode: cluster
+        bootstrap_expect: 1
