--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,8 +7,14 @@ provisioner:
 
 platforms:
   - name: ubuntu-14.04
+    run_list:
+      - recipe[apt::default]
   - name: ubuntu-12.04
+    run_list:
+      - recipe[apt::default] 
   - name: ubuntu-10.04
+    run_list:
+      - recipe[apt::default]
   - name: centos-7.0
   - name: centos-6.5
   - name: centos-5.10
