--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -27,6 +27,19 @@ suites:
     attributes:
       consul:
         install_method: source
+  - name: packages
+    run_list:
+      - recipe[consul::default]
+    attributes:
+      consul:
+        datacenter: FortMeade
+        bind_interface: eth0
+        advertise_interface: eth0
+        encrypt: CGXC2NsXW4AvuB4h5ODYzQ==
+        install_method: packages
+    excludes:
+      - centos-7.0
+      - centos-6.5
   - name: runit
     run_list:
       - recipe[consul::default]
