Fixes a bunch of issues with integration test harness.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,14 +10,16 @@ platforms:
   - name: ubuntu-12.04
   - name: centos-7.1
   - name: centos-6.6
-  
+
 suites:
   - name: default
     run_list:
       - recipe[consul::default]
     attributes:
       consul:
-        config: &defaut-config
+        config: &default-config
+          bootstrap: true
+          server: true
           datacenter: FortMeade
           encrypt: CGXC2NsXW4AvuB4h5ODYzQ==
   - name: source
@@ -33,9 +35,9 @@ suites:
       - recipe[consul::default]
     attributes:
       consul:
+        config: *default-config
         service:
           install_method: package
-        config: *default-config
     excludes:
       - centos-7.1
       - centos-6.6
