--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 ---
 language: ruby
+notifications:
+  slack: blpsi:eHp3Czg42iGzaTgG8sAFeD9v
 script: bin/rspec
 rvm:
   - 2.1
@@ -8,13 +10,5 @@ branches:
   only:
     - master
 builder_args: --jobs 7
-notifications:
-  irc:
-    channels:
-      - 'chat.freenode.net#bloomberg'
-    use_notice: true
-    skip_join: true
-    template:
-      - "%{message} (%{author}): %{build_url}"
 matrix:
   fast_finish: true
