excluded windows VM from non-windows tests

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -20,6 +20,8 @@ platforms:
 
 suites:
   - name: default
+    excludes:
+      - windows-2012r2-wrock
     run_list:
       - recipe[consul::default]
     attributes:
@@ -29,6 +31,8 @@ suites:
         advertise_interface: eth0
         encrypt: CGXC2NsXW4AvuB4h5ODYzQ==
   - name: source
+    excludes:
+      - windows-2012r2-wrock
     run_list:
       - recipe[consul::default]
     attributes:
@@ -47,7 +51,10 @@ suites:
     excludes:
       - centos-7.0
       - centos-6.5
+      - windows-2012r2-wrock
   - name: runit
+    excludes:
+      - windows-2012r2-wrock
     run_list:
       - recipe[consul::default]
     attributes:
@@ -55,6 +62,8 @@ suites:
         datacenter: FortMeade
         init_style: runit
   - name: ui
+    excludes:
+      - windows-2012r2-wrock
     run_list:
       - recipe[consul::default]
       - recipe[consul::ui]
@@ -63,6 +72,8 @@ suites:
         serve_ui: true
         client_interface: eth0
   - name: cluster
+    excludes:
+      - windows-2012r2-wrock
     run_list:
       - recipe[consul::default]
     attributes:
@@ -70,6 +81,8 @@ suites:
         service_mode: cluster
         bootstrap_expect: 1
   - name: atlas
+    excludes:
+      - windows-2012r2-wrock
     run_list:
       - recipe[consul::default]
     attributes:
