kitchen is supposed to automatically set the communicator to winrm. not sure what's going on

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -15,6 +15,7 @@ platforms:
     driver_config:
       network:
         - ["forwarded_port", {guest: 5985, host: 5985}]
+      communicator: winrm
       gui: true
       box_url: https://wrock.blob.core.windows.net/vhds/vbox2012r2.box
       customize:
