Modifies the kitchen.yml to remove TEST_WINDOWS guard.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,8 +10,7 @@ platforms:
   - name: ubuntu-12.04
   - name: centos-7.0
   - name: centos-6.5
-  <% if ENV['TEST_WINDOWS'] %>
-  - name: windows-2012r2-wrock
+  - name: windows-2012r2
     driver_config:
       network:
         - ["forwarded_port", {guest: 5985, host: 5985}]
@@ -20,12 +19,11 @@ platforms:
       box_url: https://wrock.blob.core.windows.net/vhds/vbox2012r2.box
       customize:
         usbehci: "off"
-  <% end %>
 
 suites:
   - name: default
     excludes:
-      - windows-2012r2-wrock
+      - windows-2012r2
     run_list:
       - recipe[consul::default]
     attributes:
@@ -36,7 +34,7 @@ suites:
         encrypt: CGXC2NsXW4AvuB4h5ODYzQ==
   - name: source
     excludes:
-      - windows-2012r2-wrock
+      - windows-2012r2
     run_list:
       - recipe[consul::default]
     attributes:
@@ -55,10 +53,10 @@ suites:
     excludes:
       - centos-7.0
       - centos-6.5
-      - windows-2012r2-wrock
+      - windows-2012r2
   - name: runit
     excludes:
-      - windows-2012r2-wrock
+      - windows-2012r2
     run_list:
       - recipe[consul::default]
     attributes:
@@ -67,7 +65,7 @@ suites:
         init_style: runit
   - name: ui
     excludes:
-      - windows-2012r2-wrock
+      - windows-2012r2
     run_list:
       - recipe[consul::default]
       - recipe[consul::ui]
@@ -77,7 +75,7 @@ suites:
         client_interface: eth0
   - name: cluster
     excludes:
-      - windows-2012r2-wrock
+      - windows-2012r2
     run_list:
       - recipe[consul::default]
     attributes:
@@ -86,7 +84,7 @@ suites:
         bootstrap_expect: 1
   - name: atlas
     excludes:
-      - windows-2012r2-wrock
+      - windows-2012r2
     run_list:
       - recipe[consul::default]
     attributes:
@@ -94,14 +92,12 @@ suites:
         atlas_autojoin: true
         atlas_cluster: <%= ENV.fetch('ATLAS_CLUSTER', 'example/cluster') %>
         atlas_token: <%= ENV.fetch('ATLAS_TOKEN', 'NOT_REAL') %>
-  <% if ENV['TEST_WINDOWS'] %>
   - name: windows
     includes:
-      - windows-2012r2-wrock
+      - windows-2012r2
     run_list:
       - recipe[consul::default]
     attributes:
       consul:
         install_method: windows
         service_user: vagrant
-  <% end %>
