--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,15 @@
 language: ruby
 notifications:
   slack: blpsi:eHp3Czg42iGzaTgG8sAFeD9v
-script: bin/rspec
+script: 
+  - bin/rubocop
+  - bin/rspec
 rvm:
   - 2.1
   - 2.2
 branches:
   only:
     - master
-builder_args: --jobs 7
+builder_args: --without kitchen_vagrant
 matrix:
   fast_finish: true
