--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,49 +1,44 @@
 ---
-AlignParameters:
-  Enabled: false
-
-Encoding:
-  Enabled: false
-
-ClassLength:
-  Enabled: false
-
-MethodLength:
-  Enabled: false
-
-LineLength:
-  Enabled: false
-
-Documentation:
-  Enabled: false
-
-PerceivedComplexity:
-  Enabled: false
-
-CyclomaticComplexity:
-  Enabled: false
-
-Style/FileName:
-  Enabled: false
-
-Style/FirstParameterIndentation:
-  Enabled: false
-
-Style/ClassAndModuleChildren:
-  Enabled: false
-
-Style/PercentLiteralDelimiters:
-  Enabled: false
-
-Metrics/AbcSize:
-  Enabled: false
-
 AllCops:
   Exclude:
     - 'Guardfile'
+    - 'Rakefile'
+    - 'Vagrantfile'
+    - 'Policyfile.rb'
+    - 'Berksfile'
+    - 'Thorfile'
+    - 'Gemfile'
+    - 'metadata.rb'
     - 'test/**/*'
-    - 'bin/*'
+    - 'bin/**'
     - 'vendor/**/*'
-
+AlignParameters:
+  Enabled: false
+ClassLength:
+  Enabled: false
+CyclomaticComplexity:
+  Enabled: false
+Documentation:
+  Enabled: false
+Encoding:
+  Enabled: false
+Style/FileName:
+  Enabled: false
+LineLength:
+  Enabled: false
+MethodLength:
+  Enabled: false
+Metrics/AbcSize:
+  Enabled: false
+PerceivedComplexity:
+  Enabled: false
+SingleSpaceBeforeFirstArg:
+  Enabled: false
+Style/ClassAndModuleChildren:
+  Enabled: false
+Style/FileName:
+  Enabled: false
 Style/GuardClause:
+  Enabled: false
+Style/PercentLiteralDelimiters:
   Enabled: false
