Fixed Windows data path and added tests

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -62,3 +62,20 @@ suites:
           acl_master_token: doublesecret
           acl_datacenter: fortmeade
           acl_default_policy: deny
+    excludes:
+      - windows-2012r2
+      - centos-7.2
+      - centos-6.7
+  - name: windefault
+    includes:
+      - windows-2012r2
+    run_list:
+      - recipe[consul::default]
+    attributes:
+      consul:
+        service_user: vagrant
+        config: *default-config
+        service:
+          nssm_params:
+            AppStdout: C:\foo\bar\out.log
+            AppStderr: C:\foo\bar\err.log
