--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -47,9 +47,12 @@ suites:
       - recipe[consul::default]
     attributes:
       consul:
-        config: *default-config
-        installation:
-          provider: webui
+        config:
+          bootstrap: true
+          server: true
+          ui: true
+          datacenter: FortMeade
+          encrypt: CGXC2NsXW4AvuB4h5ODYzQ==
     excludes:
       - windows-2012r2
   - name: acl
@@ -84,17 +87,3 @@ suites:
           nssm_params:
             AppStdout: C:\foo\bar\out.log
             AppStderr: C:\foo\bar\err.log
-  # - name: atlas
-  #   excludes:
-  #     - windows-2012r2
-  #   run_list:
-  #     - recipe[consul::default]
-  #   attributes:
-  #     consul:
-  #       config:
-  #         bootstrap: true
-  #         server: true
-  #         datacenter: fortmeade
-  #         atlas_join: true
-  #         atlas_infrastructure: <%= ENV.fetch('ATLAS_INFRASTRUCTURE', 'example/cluster') %>
-  #         atlas_token: <%= ENV.fetch('ATLAS_TOKEN', 'NOT_REAL') %>
