Add freebsd to the test-kitchen build matrix.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,17 +7,30 @@ provisioner:
 
 platforms:
   - name: ubuntu-14.04
+    run_list:
+      - recipe[apt::default]
   - name: ubuntu-12.04
+    run_list:
+      - recipe[apt::default]
   - name: centos-7.2
+    run_list:
+      - recipe[yum::default]
   - name: centos-6.7
+    run_list:
+      - recipe[yum::default]
   - name: centos-5.11
+    run_list:
+      - recipe[yum::default]
+  - name: freebsd-10.2
+    run_list:
+      - recipe[freebsd::default]
   - name: windows-2012r2
+    run_list:
+      - recipe[windows::default]
 
 suites:
   - name: default
     run_list:
-      - recipe[apt::default]
-      - recipe[yum::default]
       - recipe[consul::default]
     attributes:
       consul:
@@ -26,12 +39,8 @@ suites:
           server: true
           datacenter: FortMeade
           encrypt: CGXC2NsXW4AvuB4h5ODYzQ==
-    excludes:
-      - windows-2012r2
   - name: git
     run_list:
-      - recipe[apt::default]
-      - recipe[yum::default]
       - recipe[consul::default]
     attributes:
       consul:
@@ -42,8 +51,6 @@ suites:
       - windows-2012r2
   - name: webui
     run_list:
-      - recipe[apt::default]
-      - recipe[yum::default]
       - recipe[consul::default]
     attributes:
       consul:
@@ -53,8 +60,6 @@ suites:
           ui: true
           datacenter: FortMeade
           encrypt: CGXC2NsXW4AvuB4h5ODYzQ==
-    excludes:
-      - windows-2012r2
   - name: acl
     run_list:
       - recipe[consul::default]
@@ -74,16 +79,3 @@ suites:
       - centos-7.2
       - centos-6.7
       - centos-5.11
-  - name: zip
-    includes:
-      - windows-2012r2
-    run_list:
-      - recipe[consul::default]
-    attributes:
-      consul:
-        service_user: vagrant
-        config: *default-config
-        service:
-          nssm_params:
-            AppStdout: C:\foo\bar\out.log
-            AppStderr: C:\foo\bar\err.log
