--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 ---
 language: ruby
-#cache: bundler
+cache: bundler
 sudo: false
 notifications:
   slack: bloomberg-rnd:BvYmxrV9xj902XWTRNrkLNkR
-before_script:
-  - bundle update berkshelf
 script: bundle exec rake travis
 rvm:
   - 2.2
