--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -12,7 +12,7 @@ provisioner:
 
 platforms:
   - name: centos-7
-    named_run_list: rhel
+    named_run_list: centos
     driver:
       image: centos:7
       platform: rhel
@@ -21,7 +21,7 @@ platforms:
         - RUN yum clean all
         - RUN yum -y install net-tools lsof
   - name: centos-6
-    named_run_list: rhel
+    named_run_list: centos
     driver:
       image: centos:6
       platform: rhel
@@ -32,6 +32,14 @@ platforms:
     named_run_list: debian
     driver:
       image: ubuntu:16.04
+      pid_one_command: /usr/lib/systemd/systemd
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update
+        - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
+  - name: ubuntu-14.04
+    named_run_list: debian
+    driver:
+      image: ubuntu:14.04
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
