--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -27,21 +27,49 @@ platforms:
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN yum -y install which initscripts
+  - name: centos-5
+    named_run_list: centos
+    driver:
+      image: centos:5
+      platform: rhel
+      pid_one_command: /sbin/init
+      intermediate_instructions:
+        - RUN yum -y install which initscripts
   - name: ubuntu-16.04
     named_run_list: debian
     driver:
       image: ubuntu:16.04
       pid_one_command: /bin/systemd
       intermediate_instructions:
-        - RUN /usr/bin/apt-get update
+        - RUN /usr/bin/apt-get update -y
   - name: ubuntu-14.04
     named_run_list: debian
     driver:
       image: ubuntu:14.04
       pid_one_command: /sbin/init
       intermediate_instructions:
+        - RUN /usr/bin/apt-get update -y
+  - name: ubuntu-12.04
+    named_run_list: debian
+    driver:
+      image: ubuntu:12.04
+      pid_one_command: /sbin/init
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update -y
+  - name: debian-8
+    driver:
+      image: debian:8
+      pid_one_command: /bin/systemd
+      intermediate_instructions:
         - RUN /usr/bin/apt-get update
-
+        - RUN /usr/bin/apt-get install lsb-release -y
+  - name: debian-7
+    driver:
+      image: debian:7
+      pid_one_command: /sbin/init
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update
+        - RUN /usr/bin/apt-get install lsb-release -y
 suites:
   - name: default
     provisioner:
