--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,12 @@ env:
   matrix:
     - INSTANCE=default-centos-7
     - INSTANCE=default-centos-6
+    - INSTANCE=default-centos-5
     - INSTANCE=default-ubuntu-1604
     - INSTANCE=default-ubuntu-1404
+    - INSTANCE=default-ubuntu-1204
+    - INSTANCE=default-debian-8
+    - INSTANCE=default-debian-7
 before_script:
   # https://github.com/zuazo/kitchen-in-travis-native/issues/1#issuecomment-142230889
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
