--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -27,14 +27,6 @@ platforms:
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN yum -y install which initscripts
-  - name: centos-5
-    named_run_list: centos
-    driver:
-      image: centos:5
-      platform: rhel
-      pid_one_command: /sbin/init
-      intermediate_instructions:
-        - RUN yum -y install which initscripts
   - name: ubuntu-16.04
     named_run_list: debian
     driver:
@@ -49,6 +41,7 @@ platforms:
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN /usr/bin/apt-get update -y
+        - RUN /usr/bin/apt-get install sudo -y
   - name: ubuntu-12.04
     named_run_list: debian
     driver:
@@ -56,20 +49,23 @@ platforms:
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN /usr/bin/apt-get update -y
+        - RUN /usr/bin/apt-get install sudo -y
   - name: debian-8
+    named_run_list: debian
     driver:
       image: debian:8
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-        - RUN /usr/bin/apt-get install lsb-release -y
+        - RUN /usr/bin/apt-get install lsb-release sudo -y
   - name: debian-7
+    named_run_list: debian
     driver:
       image: debian:7
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-        - RUN /usr/bin/apt-get install lsb-release -y
+        - RUN /usr/bin/apt-get install lsb-release sudo -y
 suites:
   - name: default
     provisioner:
