Add kitchen-verifier-serverspec to run tests on Travis.

--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -10,6 +10,9 @@ transport:
 provisioner:
   name: dokken
 
+verifier:
+  name: serverspec
+
 platforms:
   - name: centos-7
     named_run_list: centos
