Update kitchen dokken configuration.

--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -41,7 +41,7 @@ platforms:
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update -y
-        - RUN /usr/bin/apt-get install sudo -y
+        - RUN /usr/bin/apt-get install sudo net-tools -y
     attributes:
       poise-service:
         consul:
@@ -49,19 +49,27 @@ platforms:
   - name: ubuntu-14.04
     named_run_list: debian
     driver:
-      image: ubuntu:14.04
+      image: ubuntu-upstart:14.04
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN /usr/bin/apt-get update -y
-        - RUN /usr/bin/apt-get install sudo -y
+        - RUN /usr/bin/apt-get install sudo net-tools -y
+    attributes:
+      poise-service:
+        consul:
+          provider: upstart
   - name: ubuntu-12.04
     named_run_list: debian
     driver:
-      image: ubuntu:12.04
+      image: ubuntu-upstart:12.04
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN /usr/bin/apt-get update -y
-        - RUN /usr/bin/apt-get install sudo -y
+        - RUN /usr/bin/apt-get install sudo net-tools -y
+    attributes:
+      poise-service:
+        consul:
+          provider: upstart
   - name: debian-8
     named_run_list: debian
     driver:
@@ -69,7 +77,7 @@ platforms:
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-        - RUN /usr/bin/apt-get install lsb-release sudo -y
+        - RUN /usr/bin/apt-get install lsb-release sudo net-tools -y
     attributes:
       poise-service:
         consul:
@@ -81,7 +89,7 @@ platforms:
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-        - RUN /usr/bin/apt-get install lsb-release sudo -y
+        - RUN /usr/bin/apt-get install lsb-release sudo net-tools -y
 suites:
   - name: default
     provisioner:
