--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -26,6 +26,13 @@ platforms:
     named_run_list: freebsd
   - name: windows-2012r2
     named_run_list: windows
+    driver_config:
+      network:
+        - ["forwarded_port", {guest: 3389, host: 3389}]
+        - ["forwarded_port", {guest: 5985, host: 5985}]
+      communicator: winrm
+      customize:
+        usbehci: "off"
 
 suites:
   - name: default
