Update cookbook to use poise-archive for unzipping.

--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -3,16 +3,12 @@ driver:
   name: dokken
   chef_version: latest
   privileged: true
-
 transport:
   name: dokken
-
 provisioner:
   name: dokken
-
 verifier:
   root_path: /opt/verifier
-
 platforms:
   - name: centos-7
     named_run_list: centos
@@ -103,3 +99,11 @@ suites:
           server: true
           datacenter: FortMeade
           encrypt: CGXC2NsXW4AvuB4h5ODYzQ==
+  - name: archive
+    provisioner:
+      policyfile: test/fixtures/policies/default.rb
+    attributes:
+      consul:
+        provider: binary
+        options:
+          version: 0.7.0
