--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -107,3 +107,17 @@ suites:
         provider: binary
         options:
           version: 0.7.1
+  - name: webui
+    provisioner:
+      policyfile: test/fixtures/policies/default.rb
+    attributes:
+      consul:
+        provider: binary
+        options:
+          version: 0.7.1
+        config:
+          bootstrap: true
+          server: true
+          ui: true
+          datacenter: FortMeade
+          encrypt: CGXC2NsXW4AvuB4h5ODYzQ==
