Update Rakefile and .travis.yml
Use a single suite to run unit tests, cookbook style checks and foodcritic.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,19 @@
----
 sudo: required
 dist: trusty
-language: generic
-cache: bundler
+
+# install the pre-release chef-dk.  Use chef-stable-trusty to install the stable release
 addons:
   apt:
     sources:
       - chef-current-trusty
     packages:
       - chefdk
+
+# Don't `bundle install` which takes about 1.5 mins
+install: echo "skip bundle install"
+
 services: docker
+
 env:
   matrix:
     - INSTANCE=default-centos-7
@@ -27,25 +31,25 @@ before_script:
   # https://github.com/zuazo/kitchen-in-travis-native/issues/1#issuecomment-142230889
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
   - eval "$(/opt/chefdk/bin/chef shell-init bash)"
-  - /opt/chefdk/embedded/bin/chef gem install kitchen-dokken
-  - /opt/chefdk/embedded/bin/chef gem install kitchen-verifier-serverspec
-  - /opt/chefdk/embedded/bin/chef --version
-  - /opt/chefdk/embedded/bin/cookstyle --version
-  - /opt/chefdk/embedded/bin/foodcritic --version
+
 script: KITCHEN_LOCAL_YAML=.kitchen.dokken.yml kitchen verify ${INSTANCE}
+
 after_script:
   - docker images
   - docker ps -a
   - cat .kitchen/logs/kitchen.log
+
 matrix:
   include:
-  - script: /opt/chefdk/embedded/bin/cookstyle
-    env:  COOKSTYLE=1
-  - script: /opt/chefdk/embedded/bin/foodcritic . --exclude spec -f any
-    env:  FOODCRITIC=1
-  - script:
+    - before_script:
+      - eval "$(/opt/chefdk/bin/chef shell-init bash)"
+      - /opt/chefdk/embedded/bin/chef --version
+      - /opt/chefdk/embedded/bin/cookstyle --version
+      - /opt/chefdk/embedded/bin/foodcritic --version
+    - script:
       - bundle install
-      - bundle exec rspec --color --default-path test/spec
-    env:  CHEFSPEC=1
+      - bundle exec rake
+      env: UNIT_AND_LINT=1
+
 notifications:
   slack: bloomberg-rnd:BvYmxrV9xj902XWTRNrkLNkR
