Add support of Consul 0.7.3 and 0.7.4

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -46,6 +46,8 @@ suites:
           bootstrap_expect: 1
   - name: git
     attributes:
+      go:
+        version: 1.7
       consul:
         config: *default-config
         installation:
