.kitchen.dokken.yml: Set "sysvinit" provider for Debian 7
Provider auto-detection gives an invalid result in Docker:
https://github.com/poise/poise-service/commit/171a6d8af9e8d7bf482302d2d27bef017dff2ce6#comments

--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -89,6 +89,10 @@ platforms:
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
         - RUN /usr/bin/apt-get install lsb-release net-tools -y
+    attributes:
+      poise-service:
+        consul:
+          provider: sysvinit
 
 suites:
   - name: default
