The `nssm` cookbook no longer works on Chef 14

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,6 +5,8 @@ driver:
 provisioner:
   name: chef_zero
   policyfile: test/fixtures/policies/default.rb
+  product_name: chef
+  product_version: 13
 
 verifier:
   name: inspec
