--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
     sources:
       - chef-stable-trusty
     packages:
-      - chefdk
+      - chefdk=2.4.17-1
 
 install: echo "skip bundle install"
 services: docker
