Restore the ability to set a custom open file limit
This seems to have existed, at least for Upstart, in [older versions](https://github.com/sous-chefs/consul/blob/v0.11.1/attributes/default.rb#L123) of the cookbook, but disappeared with the conversion to poise-service.

The Kitchen suites have a pretty basic default config that I was hesitant to mess with, hence the new test suite, which could also be used to validate other config overrides in the future. If the additional build time is going to be a problem, I can rip those tests back out or put them in the default suite.

Signed-off-by: Jonathan Hartman <j@hartman.io>

--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -88,7 +88,7 @@ platforms:
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-        - RUN /usr/bin/apt-get install lsb-release net-tools -y
+        - RUN /usr/bin/apt-get install lsb-release net-tools procps -y
     attributes:
       poise-service:
         consul:
@@ -109,3 +109,12 @@ suites:
           acl_master_token: doublesecret
           acl_datacenter: FortMeade
           acl_default_policy: deny
+
+  - name: overrides
+    provisioner:
+      policyfile: test/fixtures/policies/default.rb
+    attributes:
+      consul:
+        config: *default-config
+        service:
+          nofile_limit: 2048
